--- a/index.html
+++ b/index.html
@@ -88,9 +88,15 @@
                 </div>
             </div>
         </div>
+        <!--Hero End-->
+        <!--Description-->
+        <div class="col-12 my-3 p-3 border rounded-3 text-center">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ab dolor corporis iure quis sapiente eum numquam repellendus officiis fugiat! Provident, iure. Et nulla quam eveniet fugiat ducimus assumenda nostrum!
+            </p>
+        </div>
+        <!--Description End-->
     </div>
-
-    <!--Hero End-->
     <!--Header End-->
     </div>
 
