changed header for desktop

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div class="container">
       <!--Header Section-->
       <!--Hero-->
-      <div class="row m-3">
-        <div class="col-12 p-5 text-center bg-hero-image rounded-3">
+      <div class="row justify-content-center m-3">
+        <div class="col-12 col-lg-5 p-5 me-3 text-center bg-hero-image rounded-start-3">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
               <h1 class="mb-3">Monthly Website Gallery</h1>
@@ -103,8 +103,8 @@
         </div>
         <!--Hero End-->
         <!--Description-->
-        <div class="col-12 my-3 p-3 border rounded-3 text-center">
-          <p>
+        <div class="col-12 col-lg-5 my-3 my-lg-0 p-3 bg-dark-subtle border rounded-end-3 text-center">
+          <p class="m-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
             ab dolor corporis iure quis sapiente eum numquam repellendus
             officiis fugiat! Provident, iure. Et nulla quam eveniet fugiat
